[package]
name = "es-wifi-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6", default-features = false }
moveslice = { version = "2.0" }
heapless = "0.7"
futures-intrusive = { version = "0.4", default-features = false }
embassy-time = { version = "0.1.0", default-features = false, features = ["defmt-timestamp-uptime", "defmt"] }
embassy-sync = { version = "0.1.0", default-features = false, features = ["nightly"] }

embedded-hal = { package = "embedded-hal", version = "1.0.0-alpha.8"}
embedded-hal-async = { version = "0.1.0-alpha.1" }
embedded-io = { version = "0.3.0", features = ["async"] }
embedded-nal-async = { version = "0.2.0" }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
