[package]
name = "esp8266-at-driver"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Driver for the espressif esp8266 at command firmware."
repository = "https://github.com/drogue-iot/esp8266-at-driver"
categories = [
    "embedded",
    "no-std",
]

[dependencies]
nom = { version = "6", default-features = false }
moveslice = { version = "2.0" }
heapless = "0.7"
futures-intrusive = { version = "0.4", default-features = false }
embassy-time = { version = "0.1.0", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false }
embassy-sync = { version = "0.1.0", default-features = false, features = ["nightly"] }

atomic-polyfill = "1"

embedded-hal = { package = "embedded-hal", version = "1.0.0-alpha.9"}
embedded-hal-async = { version = "0.2.0-alpha.0" }
embedded-io = { version = "0.4.0", features = ["async"] }
embedded-nal-async = { version = "0.3.0" }

arrayvec = { version = "0.6", default-features = false }

[dev-dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "645fb66a5122bdc8180e0e65d076ca103431a426", default-features = false, features = ["integrated-timers"] }

[features]
std = ["embassy-time/std"]
default = [ "std" ]
